create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2083,6 +2083,9 @@ body {
 .cid-rzxTKCx3dF .btn {
   margin: 0 0 .5rem 0;
 }
+.cid-rzxTKCx3dF H2 {
+  text-align: center;
+}
 .cid-rzl52XkRCn {
   padding-top: 30px;
   padding-bottom: 45px;
